--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,11 @@
+@import './abstracts/_variables.scss';
+
 @import './base/_base.scss';
+@import './base/_typography.scss';
 
+@import './layout/_header.scss';
+@import './layout/_navigation.scss'; 
 
+@import './components/_menu.scss';
+@import './components/_gallery.scss';                   
+                                
