--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,3 +5,17 @@
         font-size:6rem;
     }
 }
+
+.h-2{
+    display:inline-block;
+    font-weight: 600;
+    font-size:4rem;
+    text-transform: uppercase;
+}
+
+.h-3{
+    display:inline-block;
+    font-weight: 600;
+    font-size:2.5rem;
+    text-transform: uppercase;
+}
