--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -13,7 +13,7 @@
         &--1{
             top:0;
             background-size: 35rem;
-            background-image:url(../../img/covers/ian.png);
+            background-image:url("../img/covers/ian.png");
             background-position:center;
             background-repeat:no-repeat;
             transform:translateX(-50%) translateX(-20rem);
@@ -21,7 +21,7 @@
         &--2{
             top:0;
             background-size: 35rem;
-            background-image:url(../../img/covers/ian.png);
+            background-image:url("../img/covers/ian.png");
             background-position:center;
             background-repeat:no-repeat;
             transform:translateX(-50%) scale(1.2);
@@ -30,7 +30,7 @@
         &--3{
             top:0;
             background-size: 35rem;
-            background-image:url(../../img/covers/ian.png);
+            background-image:url("../img/covers/ian.png");
             background-position:center;
             background-repeat:no-repeat;
             transform:translateX(-50%) translateX(20rem)
