--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,5 +1,4 @@
 .navigation{
-
     &__list{
         display:flex;
         justify-content: space-evenly;
@@ -12,13 +11,25 @@
     }
 
     &__link{
+        transition:transform .2s;
+        backface-visibility: hidden;
+
         &,
         &:link,
         &:visited{
             display:inline-block;
             text-decoration:none;
             text-transform: uppercase;
+            font-weight: 600;
             font-size:2rem;
+            color: $color-black;
+            letter-spacing: -0.1rem;
+            transform:scale(1, 1.4);
+        }
+
+        &:hover{
+            color: $color-orange;
+            cursor:pointer;
         }
 
 
