--- a/sass/components/_offerings.scss
+++ b/sass/components/_offerings.scss
@@ -4,19 +4,48 @@
     margin:0 auto;
     list-style-type: none;
 
+    &__link{
+        text-decoration: none;
+        color:inherit;
+    }
+
     &__item{
         padding:0rem 2rem;
-        &:not(:last-child){
-            border-right: 1px solid red;
-        }
+
         &-description{
             display:inline-block;
             text-transform: uppercase;
-            font-size:2rem;
+            font-size:$text-med-small;
+            font-weight: 600;
+            color:$color-light;
+            transform:scale(1, 1.4);
+            letter-spacing: -1px;
         }
+
         &-icon{
             display: inline-block;
-            font-size:2rem;
+            padding-right: .8rem;
         }
+
+        &:not(:last-child){
+            border-right: 1px solid $color-light;
+        }
+
+        &>*{
+            vertical-align: middle;
+        }
+        
+        &:hover{
+            cursor: pointer;
+        }
+        &:hover:not(:last-child){
+            border-right: 1px solid $color-purple;
+        }
+        &:hover &-description{
+            color:$color-purple;
+        }
+    }
+
+    &__icon{
     }
 }
