--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
     display:flex;
-    padding:10rem 0;
-    background-color: rgb(100, 100, 241);
+    padding:10rem 0;    
+    background-color: $color-purple;
 
     &>*{
         flex-grow:1;
@@ -47,14 +47,21 @@
     &__link,
     &__text{
         color:whitesmoke;
-        font-size:2rem;
+        font-size:$text-small-med;
         text-transform: uppercase;
+
     }
     &__link{
         text-decoration: none;
+        &:hover{
+            color:$color-orange;
+        }
     }
     &__button{
-        background-color: green;
         padding:2rem 4rem;
+        &:hover{
+            color:$color-light;
+            background-color: $color-orange;
+        }
     }
 }
