--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,16 +1,45 @@
 .header{
-    background-color: blue;
+    background-color: $color-light;
+    position:relative;
+    padding-bottom:10rem;
+
+    &__logo-wave{
+        position:absolute;
+        top:0;
+        left:0;
+    }
+
+    &__content{
+        padding-top:4rem;
+        z-index: 3;
+        position:relative;
+    }
 
     &__main{
+        position:relative;
         display:flex;
         margin:0 auto;
-        padding:10rem 0 40rem 0;
+        padding:7rem 0;
+        justify-content: space-around;
+        max-width: 114rem;
+        z-index:3;
     }
     &__text-box{
-        
+        display:flex;
+        align-items: center;
     }
+    & .heading-primary{
+        transform: scale(1, 1.5);
+        letter-spacing: -0.3rem;
+    }
+
     &__content-box{
         flex-grow:1;
+
+        & .composition{
+            margin:0 auto;
+            width:54rem;
+        }
     }
     &__main &__text-box{
         max-width: 38rem;
@@ -18,6 +47,8 @@
 
     &__offerings{
         text-align: center;
+        position:relative;
+        z-index:3;
     }
 
     &__notch{
@@ -25,9 +56,11 @@
         position:relative;
         align-items: center;
         justify-content: center;
+        transform:translateY(-5rem);
 
-        &-image{
-            object-fit: contain;
+        &-img{
+            //object-fit: contain;
+            width:100%;
         }
         &-button{
             position:absolute;
@@ -35,6 +68,21 @@
             left:50%;
             transform:translate(-50%,-50%);
             z-index:2;
+        }
+    }
+
+    &__background{
+        padding-top:4rem;
+        height: 100%;
+        width:100%;
+        top:0;
+        left:0;
+        position:absolute;
+
+
+        &-image{
+            width:100%;
+            height:auto;
         }
     }
 }
