--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import './abstracts/_variables.scss';
 
+@import './base/_fonts.scss';
 @import './base/_base.scss';
 @import './base/_typography.scss';
 @import './base/_utilities.scss';
