--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,11 +1,10 @@
 .heading{
     &-primary{
         text-transform: uppercase;
-        font-weight: 600;
-        font-size:7rem;
-        line-height: 77.5%;
-        letter-spacing: 10%;
         color: $color-black;
+        @include text-standard($text-h1);
+        font-weight: 800;
+        line-height: 75%;
     }
 }
 
