--- a/sass/components/_offerings.scss
+++ b/sass/components/_offerings.scss
@@ -10,16 +10,13 @@
     }
 
     &__item{
-        padding:0rem 2rem;
+        display: inline-block;
+        padding:0rem 1rem;
 
         &-description{
             display:inline-block;
-            text-transform: uppercase;
-            font-size:$text-med-small;
-            font-weight: 600;
+            @include text-standard($text-small-med);
             color:$color-light;
-            transform:scale(1, 1.4);
-            letter-spacing: -1px;
         }
 
         &-icon{
