--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,10 +1,15 @@
 .footer{
-    display:flex;
-    padding:10rem 0;    
-    background-color: $color-purple;
 
-    &>*{
-        flex-grow:1;
+    &-content{
+        position:relative;
+        z-index:$z-content-layer;
+        display:flex;
+        padding:10rem 0;    
+        background-color: $color-purple;
+    
+        &>*{
+            flex-grow:1;
+        }
     }
 
     &__logo-box{
