--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header{
     background-color: $color-light;
     position:relative;
-    padding-bottom:10rem;
+    padding-bottom:15rem;
 
     &__logo-wave{
         position:absolute;
@@ -9,9 +9,27 @@
         left:0;
     }
 
+    &__overflow-container{
+        overflow: hidden;
+    }
+
+    &__green-wave{
+
+        height:auto;
+        width:100%;
+        transform:translateY(7%);
+
+
+        &--container{
+            position:absolute;
+            width:100%;
+            bottom:0;
+            left:0;
+        }
+    }
+
     &__content{
         padding-top:4rem;
-        z-index: 3;
         position:relative;
     }
 
@@ -22,20 +40,17 @@
         padding:7rem 0;
         justify-content: space-around;
         max-width: 114rem;
-        z-index:3;
     }
     &__text-box{
         display:flex;
-        align-items: center;
+        align-items: center; 
     }
     & .heading-primary{
-        transform: scale(1, 1.5);
-        letter-spacing: -0.3rem;
+        letter-spacing: -1.5px;
+        transform:scaleY(2.8)
     }
 
     &__content-box{
-        flex-grow:1;
-
         & .composition{
             margin:0 auto;
             width:54rem;
@@ -46,44 +61,57 @@
     }
 
     &__offerings{
+        transform:translateY(7rem);
+        padding-top:3rem;
         text-align: center;
-        position:relative;
-        z-index:3;
     }
 
     &__notch{
-        display:flex;
-        position:relative;
-        align-items: center;
-        justify-content: center;
-        transform:translateY(-5rem);
-
-        &-img{
-            //object-fit: contain;
-            width:100%;
-        }
-        &-button{
-            position:absolute;
-            top:92%;
-            left:50%;
-            transform:translate(-50%,-50%);
-            z-index:2;
-        }
-    }
-
-    &__background{
-        padding-top:4rem;
-        height: 100%;
-        width:100%;
-        top:0;
-        left:0;
         position:absolute;
+        bottom:0;
+        left:50%;
+        transform:translate(-50%,80%);
+        background-color: $color-green;
+        width:40%;
+        height:10rem;
+        border-radius: 0 0 20px 20px;
 
+        display:flex;
+        justify-content: center;
+        align-items: center;
 
-        &-image{
-            width:100%;
-            height:auto;
+        &-text{
+            @include text-standard(1.2rem);
+            color:$color-light;
+            padding-bottom:2rem;
+        }
+
+        &-button{
+
+            &-container{
+                position:relative;
+                transform:translateY(-2rem);
+            }
+
+            &,
+            &--behind{
+                position:absolute;
+                height:9em;
+                width:6rem;
+                margin:0 auto;
+                border-radius: 40px;
+                background-color: $color-light;
+            }
+
+            &--behind{
+                transform:scale(1.8) translateY(-10%);
+                background-color: $color-green;
+                clip-path: polygon(0 50%, 100% 50%, 100% 100%, 0% 100%);
+                
+            }
+
         }
     }
+
 }
 
