--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './abstracts/_variables.scss';
+@import './abstracts/_mixins.scss'; 
 
 @import './base/_fonts.scss';
 @import './base/_base.scss';
@@ -9,6 +10,7 @@
 @import './layout/_header.scss';
 @import './layout/_navigation.scss'; 
 @import './layout/_footer.scss';
+@import './layout/_layers.scss'; 
 
 @import './pages/_home.scss';
 
@@ -21,5 +23,4 @@
 @import './components/_content-items.scss'; 
 @import './components/_carousel.scss';                
 @import './components/_form.scss';  
-       
-                  
+         
