--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -21,6 +21,9 @@ body{
 [class^="section"]{
     position:relative;
 }
+footer.footer{
+    position:relative
+}
 .wrapper{
     max-width: 114rem;
     margin: 0 auto; 
