--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@ body {
 [class^="section"] {
   position: relative; }
 
+footer.footer {
+  position: relative; }
+
 .wrapper {
   max-width: 114rem;
   margin: 0 auto; }
@@ -198,54 +201,67 @@ body {
     color: #fa492d;
     cursor: pointer; }
 
-.footer-content {
-  position: relative;
-  z-index: 20;
-  display: flex;
-  padding: 10rem 0;
-  background-color: #2f2c96; }
-  .footer-content > * {
-    flex-grow: 1; }
-
-.footer__logo-box {
-  text-align: right;
-  padding-right: 3rem; }
-
-.footer__list {
-  display: flex;
-  flex-direction: row;
-  list-style-type: none;
-  padding-left: 3rem; }
-  .footer__list--standalone {
-    padding-left: 0; }
-    .footer__list--standalone .footer__list-item:first-child {
-      padding-left: 0; }
-  .footer__list-section {
+.footer {
+  background-color: #FFF7E1; }
+  .footer .background-layer__clip {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(100% 100%, 0% 100%, 0% 20%, 50% 0%, 100% 20%);
+    background-color: #2f2c96; }
+  .footer__wave {
+    position: absolute; }
+    .footer__wave--top {
+      top: 0;
+      left: 0;
+      height: 100%; }
+    .footer__wave--bottom {
+      bottom: 0;
+      right: 0; }
+  .footer-content {
+    position: relative;
+    z-index: 20;
     display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start; }
-    .footer__list-section:not(:last-child) {
-      margin-right: 5rem; }
-  .footer__list-item {
-    display: block;
-    padding: 1rem .5rem; }
-
-.footer__link, .footer__text {
-  color: whitesmoke;
-  font-size: 1.6rem;
-  text-transform: uppercase; }
-
-.footer__link {
-  text-decoration: none; }
-  .footer__link:hover {
-    color: #fa492d; }
-
-.footer__button {
-  padding: 2rem 4rem; }
-  .footer__button:hover {
-    color: #FFF7E1;
-    background-color: #fa492d; }
+    padding: 10rem 0 10rem 0; }
+    .footer-content > * {
+      flex-grow: 1; }
+  .footer__logo-box {
+    text-align: right;
+    padding-right: 3rem; }
+  .footer__list {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    padding-left: 3rem; }
+    .footer__list--standalone {
+      padding-left: 0; }
+      .footer__list--standalone .footer__list-item:first-child {
+        padding-left: 0; }
+    .footer__list-section {
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: start; }
+      .footer__list-section:not(:last-child) {
+        margin-right: 5rem; }
+    .footer__list-item {
+      display: block;
+      padding: 1rem .5rem; }
+  .footer__link, .footer__text {
+    color: whitesmoke;
+    font-size: 1.6rem;
+    text-transform: uppercase; }
+  .footer__link {
+    text-decoration: none; }
+    .footer__link:hover {
+      color: #fa492d; }
+  .footer__button {
+    padding: 2rem 4rem; }
+    .footer__button:hover {
+      color: #FFF7E1;
+      background-color: #fa492d; }
 
 .background-layer {
   position: absolute;
@@ -265,10 +281,15 @@ body {
   background-color: #FFF7E1;
   padding-top: 20rem;
   padding-bottom: 15rem; }
+  .section-projects__overflow-container {
+    overflow: hidden; }
+    .section-projects__overflow-container--wave {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 5; }
   .section-projects__wave {
-    position: absolute;
-    top: 0;
-    right: 0; }
+    transform: translateY(-20%); }
   .section-projects .gallery {
     margin: 0 auto;
     padding-bottom: 7rem; }
@@ -311,12 +332,18 @@ body {
 
 .section-blog {
   background-color: #2f2c96;
-  padding: 2rem 0 10rem 0;
+  padding: 2rem 0 5rem 0;
   position: relative; }
   .section-blog__wave {
     position: absolute;
     top: 0;
     right: 0; }
+  .section-blog__bottom-wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    transform: translateY(100%); }
   .section-blog .h-3 {
     color: #FFF7E1;
     transform: scale(1, 1.6);
@@ -335,7 +362,8 @@ body {
       background-color: #fa492d; }
 
 .section-form {
-  background-color: #FFF7E1; }
+  background-color: #FFF7E1;
+  padding: 12rem 0 0 0; }
 
 .button {
   border-radius: 50px;
