--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,11 +1,34 @@
-.footer{
+.footer{ 
+    background-color: $color-light;
+    & .background-layer{
+        &__clip{
+            position:absolute;
+            top:0;
+            left:0;
+            width: 100%;
+            height: 100%;
+            clip-path:polygon(100% 100%, 0% 100%, 0% 20%, 50% 0%, 100% 20%);
+            background-color: $color-purple;
+        }
+    }
+    &__wave{
+        position:absolute; 
+        &--top{
+            top:0;
+            left:0;
+            height: 100%;
+        }
+        &--bottom{
+            bottom:0;
+            right:0;
+        }
+    }
 
     &-content{
         position:relative;
         z-index:$z-content-layer;
         display:flex;
-        padding:10rem 0;    
-        background-color: $color-purple;
+        padding:10rem 0 10rem 0;    
     
         &>*{
             flex-grow:1;
